--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/style.css
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/style.css
@@ -1,4 +1,31 @@
 @charset "UTF-8";
-*{
-    height: 100%;
+
+*{ 
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    background-image: linear-gradient(to right, #42708C, #77B3D9 );
+}
+
+main {
+     background-color: darkgray;
+     width: 600px;
+     padding: 10px;
+     margin: auto;
+     border-radius: 15px;
+     box-shadow: 5px 5px 15px rgba(33, 50, 87, 0.616);
+ }
+
+ 
+h1{
+    color: ;
+
+}
+h2{
+
+    
+}
+p {
+    text-align: justify;
 }
