--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/style.css
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 main {
-     background-color: darkgray;
+     background-color: rgb(190, 172, 64);
      width: 600px;
      padding: 10px;
      margin: auto;
