--- a/Primeiros passos (CSS3)/018 - Seletores personalizados/style.css
+++ b/Primeiros passos (CSS3)/018 - Seletores personalizados/style.css
@@ -17,6 +17,9 @@ h1{
     
     
 }
+.sub{
+    
+}
 h2{
     color: rgb(18, 138, 18);
 }
@@ -29,4 +32,8 @@ h2{
 }
 .avancado{
     color: crimson;
+}
+
+.destaque{
+    color: yellow;
 }
