--- a/Primeiros passos (CSS3)/d10-desafiosite/estilo/style.css
+++ b/Primeiros passos (CSS3)/d10-desafiosite/estilo/style.css
@@ -56,6 +56,7 @@ nav{
     padding: 0;
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
     
 
 }
@@ -71,12 +72,14 @@ nav a {
 
 nav a:hover{
     background-color: #83e1ad;
+    transition-duration: .3s;
 
 }
 main{
+   
     background-color: white;
     min-width: 300px;
-    max-width: 1000px;
+    max-width: 800px;
     margin: auto;
     padding: 20px;
     box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.274);
@@ -96,7 +99,33 @@ main img{
 }
 
 main img.pequena{
-    width: 50%;
+    max-width: 350%;
     display: block;
     margin: auto;
+}
+
+main p{
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    
+    line-height: 1.5em; /* espaçamento entre linhas*/
+}
+
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+aside ul{
+    list-style: inside;
+    columns: 2; /*colunas*/
+}
+footer{
+    background-color: var(--cor4);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
 }
