--- a/Primeiros passos (CSS3)/d10-desafiosite/estilo/style.css
+++ b/Primeiros passos (CSS3)/d10-desafiosite/estilo/style.css
@@ -122,6 +122,17 @@ aside ul{
     list-style: inside;
     columns: 2; /*colunas*/
 }
+
+aside h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px;
+    border-radius: 10px 10px 0 0 ; 
+    text-align: center;
+}
+
+
 footer{
     background-color: var(--cor4);
     color: white;
